--- a/style.css
+++ b/style.css
@@ -240,3 +240,68 @@ margin:10px 5px;
  margin-left: 205px;
  padding-right:25%;
 }
+
+
+@media only screen and  (max-width: 600px) {
+
+@keyframes slidein {
+  from {
+    margin-left: 100%;
+    width: 100%; 
+ 
+  }
+
+  to {
+    margin-left: 28%;
+    width: 100%;
+
+  }
+}
+
+h1{
+margin-left:28%;
+font-size:40px;
+}
+
+.video{
+margin:10px 5px;
+ float: left;
+ margin-left: 205px;
+ padding-right:0;
+}
+
+}
+
+@media only screen and (min-width: 601px) and (max-width: 1449px) {
+
+
+
+.video{
+margin:10px 5px;
+ float: left;
+ margin-left: 205px;
+ padding-right:18%;
+}
+
+}
+
+@media only screen and (min-width: 1450px) {
+
+.video{
+margin:10px 5px;
+ float: left;
+ margin-left: 205px;
+ padding-right:30.5%;
+}
+
+.tb{
+ width: 20%;
+ float: left;
+ margin-left: 400px;
+ background:green;
+ padding:5.1px; 
+}
+
+}
+
+
