--- a/style.css
+++ b/style.css
@@ -234,6 +234,13 @@ color:#00ccff;
 
 }
 
+.footer{
+margin-left:1em;
+margin-right:4em;
+float:left;
+}
+
+
 .video{
 margin:10px 5px;
  float: left;
